istio/gke-gateway-l4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      #serviceAccountName: frontend
      containers:
        - name: server
          image: poxstone/flask_any_response
          ports:
          - containerPort: 8080
